Updating readme with information on URL encoding and SSL config.